[project]
name = "api-debug-tool"
version = "2.0.0"
description = "ðŸš€ å¼·åŒ–ç‰ˆ API è‡ªå‹• Debug å·¥å…· - æ”¯æ´å¤šç¨® HTTP æ–¹æ³•ã€æ‰¹æ¬¡æ¸¬è©¦ã€HTML å ±å‘Šç”Ÿæˆ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0", 
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0"
]

[project.scripts]
auto-debug = "auto_debug:main"
batch-tester = "batch_tester:main"
report-generator = "report_generator:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "auto_debug.py",
    "api_tester.py", 
    "batch_tester.py",
    "report_generator.py",
    "README.md"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
